# doom-legacy

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  libtnl_patch.diff
audio/: CMakeLists.txt  Makefile  qmus2mid.cpp  s_sndseq.cpp  s_sound.cpp  sounds.cpp
docs/: BUGS.html  JDS_MAPINFO.html  JointTextureSpec.txt  TODO.html  compiling.html  console.html  editing.html  elements.html  example.deh  features.html  fsbasic.html  legacy.css  legacy.html  manual.doxygen  source.html
engine/: Makefile  a_action.cpp  ai_mobjinfo.cpp  ai_states.cpp  d_items.cpp  d_main.cpp  dstrings.cpp  g_actor.cpp  g_decorate.cpp  g_demo.cpp  g_game.cpp  g_input.cpp  g_level.cpp  g_map.cpp  g_mapinfo.cpp  g_pawn.cpp  g_player.cpp  g_state.cpp  g_team.cpp  g_think.cpp  g_type.cpp  m_cheat.cpp  p_anim.cpp  p_camera.cpp  p_ceilng.cpp  p_doors.cpp  p_effects.cpp  p_enemy.cpp  p_events.cpp  p_fab.cpp  p_floor.cpp  p_genlin.cpp  p_hacks.cpp  p_henemy.cpp  p_heretic.cpp  p_hpspr.cpp  p_hsight.cpp  p_inter.cpp  p_lights.cpp  p_map.cpp  (+16 more)
engine/automap/: am_map.cpp
engine/bots/: acbot.cpp  b_bot.cpp  b_path.cpp
engine/finale/: f_finale.cpp  f_wipe.cpp  wi_stuff.cpp
engine/hud/: hu_stuff.cpp  st_lib.cpp  st_stuff.cpp
engine/menu/: menu.cpp
engine/scripting/: acs.cpp  p_acs.cpp  t_func.cpp  t_oper.cpp  t_parse.cpp  t_prepro.cpp  t_script.cpp  t_spec.cpp  t_vari.cpp
grammars/: Makefile  decorate.lexer.flex  decorate.parser.y  ntexture.cpp  ntexture.flex  ntexture.lexer.flex  ntexture.parser.y  ntexture.y  parser_driver.cpp  parser_driver.h
include/: a_functions.h  acbot.h  am_map.h  b_bot.h  b_path.h  command.h  console.h  cvars.h  d_debug.h  d_event.h  d_french.h  d_items.h  d_main.h  d_ticcmd.h  dehacked.h  dictionary.h  doomdata.h  doomdef.h  doomtype.h  dstrings.h  f_finale.h  f_wipe.h  filesrch.h  functors.h  g_actor.h  g_blockmap.h  g_damage.h  g_decorate.h  g_game.h  g_input.h  g_level.h  g_map.h  g_mapinfo.h  g_pawn.h  g_player.h  g_team.h  g_think.h  g_type.h  hud.h  i_net.h  (+71 more)
include/hardware/: hwr_bsp.h  hwr_geometry.h  hwr_render.h  hwr_states.h  md3.h  oglhelpers.hpp  oglrenderer.hpp  oglshaders.h
interface/sdl/: Makefile  endtxt.cpp  filesrch.cpp  i_cdmus.cpp  i_main.cpp  i_net.cpp  i_sound.cpp  i_system.cpp  i_video.cpp  ogl_sdl.cpp
net/: Makefile  cl_main.cpp  n_connection.cpp  n_interface.cpp  sv_cmds.cpp  sv_main.cpp
resources/: DECORATE_Doom.txt  DECORATE_Heretic.txt  DECORATE_Hexen.txt  DEF_sound.lmp  FS_things.h  MAPINFO_Doom.txt  MAPINFO_Doom2.txt  MAPINFO_Evilution.txt  MAPINFO_Heretic.txt  MAPINFO_Plutonia.txt  SNDINFO.txt  SNDSEQ.txt  VERSION.txt  doom2hexen.txt  heretic2hexen.txt  legacy.wad.inventory
src/: src_files.txt
src/audio/: s_sound.cpp  sounds.cpp
src/engine/: CMakeLists.txt  Makefile  a_action.cpp  ai_states.cpp  d_items.cpp  d_main.cpp  g_actor.cpp  g_decorate.cpp  g_demo.cpp  g_input.cpp  g_level.cpp  g_map.cpp  g_think.cpp  p_ceilng.cpp  p_doors.cpp  p_events.cpp  p_floor.cpp  p_genlin.cpp  p_hacks.cpp  p_henemy.cpp  p_lights.cpp  p_map.cpp  p_maputl.cpp  p_plats.cpp  p_saveg.cpp  p_setup.cpp  p_sight.cpp  p_tick.cpp  p_user.cpp  p_xenemy.cpp  p_xpspr.cpp
src/engine/automap/: am_map.cpp
src/engine/bots/: b_bot.cpp  b_path.cpp
src/engine/finale/: wi_stuff.cpp
src/engine/hud/: hu_stuff.cpp  st_stuff.cpp
src/engine/scripting/: acs.cpp  t_oper.cpp  t_parse.cpp  t_script.cpp
src/grammars/: CMakeLists.txt  Makefile  decorate.parser.y  ntexture.parser.y  ntexture.y
src/interface/: CMakeLists.txt
src/interface/sdl/: Makefile  filesrch.cpp  i_cdmus.cpp  i_net.cpp  i_sound.cpp  i_system.cpp  i_video.cpp
src/net/: CMakeLists.txt  Makefile  n_connection.cpp  sv_main.cpp
src/util/: CMakeLists.txt  Makefile  command.cpp  console.cpp  m_bbox.cpp  m_dll.cpp  m_fixed.cpp  m_random.cpp  md5.cpp  mnemonics.cpp  vfile.cpp  w_wad.cpp  z_cache.cpp  z_zone.cpp
src/video/: Makefile  jpeg.cpp  r_anim.cpp  r_data.cpp  r_draw8.cpp  r_font.cpp  r_main.cpp  r_plane.cpp  r_segs.cpp  r_splats.cpp  screen.cpp
src/video/hardware/: hw_trick.cpp  hwr_render.cpp  md3.cpp  oglhelpers.cpp  oglrenderer.cpp
tools/: Makefile  convert_deh.cpp  d2h.cpp  doom2hexen.cpp  wadtool.cpp
util/: Makefile  command.cpp  console.cpp  dehacked.cpp  m_archive.cpp  m_argv.cpp  m_bbox.cpp  m_dll.cpp  m_fixed.cpp  m_misc.cpp  m_random.cpp  m_swap.cpp  md5.cpp  parser.cpp  tables.cpp  vfile.cpp  w_wad.cpp  wad.cpp  z_cache.cpp  z_zone.cpp
video/: CMakeLists.txt  Makefile  jpeg.cpp  png.cpp  r_anim.cpp  r_bsp.cpp  r_data.cpp  r_draw.cpp  r_draw16.cpp  r_draw8.cpp  r_font.cpp  r_main.cpp  r_plane.cpp  r_render.cpp  r_segs.cpp  r_sky.cpp  r_splats.cpp  r_sprite.cpp  r_things.cpp  screen.cpp  v_video.cpp
video/hardware/: hw_trick.cpp  hwr_bsp.cpp  hwr_geometry.cpp  hwr_render.cpp  hwr_states.cpp  md3.cpp  oglhelpers.cpp  oglrenderer.cpp  oglshaders.cpp
wad/: Makefile
